--- a/app/assets/javascripts/rich/editor/rich_editor.js.erb
+++ b/app/assets/javascripts/rich/editor/rich_editor.js.erb
@@ -12,3 +12,4 @@ function addQueryString( url, params ) {
 // load external plugins
 CKEDITOR.plugins.addExternal('MediaEmbed', '<%= asset_path('ckeditor-contrib/plugins/MediaEmbed/') %>');
 CKEDITOR.plugins.addExternal('richfile', '<%= asset_path('ckeditor-contrib/plugins/richfile/') %>');
+CKEDITOR.plugins.addExternal('liTab', '<%= asset_path('ckeditor-contrib/plugins/liTab/') %>');
